# update-indicator

./: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
src/: GConfInterface.c  GConfInterface.vala  Indicate.c  Indicate.vala  Makefile  Makefile.am  Makefile.in  Preferences.c  Preferences.vala  UpdateChecker.c  UpdateChecker.vala  UpdateIndicator.glade  main.c  main.vala  update_indicator  update_indicator.vala
src/icons/: Makefile  Makefile.am  Makefile.in
src/po/: update-indicator.pot
